project/force-app/main/default/objects/Product2/fields/Total_Budget_Capex__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Capex__c</fullName>
    <description>Help Text: (VNĐ)
Read Only;
= Tổng (NS Hỗ trợ Capex Tầng X * Diện Tích GFA Tầng X (m2))</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Capex Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>