project/force-app/main/default/objects/Product2/fields/Total_Budget_Capex_VND__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Capex_VND__c</fullName>
    <description>Read Only;
= NS Capex (USD) * Tỉ giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Capex (VND)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>