project/force-app/main/default/objects/Product2/fields/Total_Budget_Renting_Outdoor_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Renting_Outdoor_USD_Month__c</fullName>
    <description>Read Only;
= Đơn Giá NS Ngoài Trời (USD) * Diện Tích Ngoài Trời</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Renting Outdoor (USD/Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>