project/force-app/main/default/objects/Product2/fields/Total_Budget_Renting_Outdoor_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Renting_Outdoor_VND_Month__c</fullName>
    <description>Read Only;
= Tiền Thuê NS Ngoài Trời (USD) * Tỉ Giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Renting Outdoor (VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>