project/force-app/main/default/objects/Product2/fields/Total_Budget_Service_Fee_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Service_Fee_VND_Month__c</fullName>
    <description>Read Only;
= Tiền Phí Dịch Vụ (USD) * Tỉ Giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Service Fee (VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>