project/force-app/main/default/objects/Product2/fields/Total_Budget_Support_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Support_Amount_USD__c</fullName>
    <description>Read Only;
(1) Đối với Hình Thức Hỗ Trợ NS = Miễn Phí Tiền Thuê: (Đơn Giá NS Nguyên Căn (USD/m2/Tháng) * Số Tháng Hỗ Trợ NS * Tổng Diện Tích GFA (m2)) + (Đơn Giá NS Ngoài Trời (USD/m2/Tháng) * Diện Tích Ngoài Trời (m2) * Số Tháng Hỗ Trợ NS)

(2) Đối với Hình Thức Hỗ Trợ NS = Miễn Phí Phí Dịch Vụ: Phí Dịch Vụ NS (USD/m2/Tháng) * Số Tháng Hỗ Trợ NS * Tổng Diện Tích 

(3) Đối với Hình Thức Hỗ Trợ NS = Miễn Phí Tiền Thuê &amp; Phí Dịch Vụ: (1) + (2)</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Support Amount (USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>