project/force-app/main/default/objects/Product2/fields/Total_Budget_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Voucher__c</fullName>
    <description>Help Text: VNĐ
&apos;= Số Tháng Hỗ Trợ * Tiền Voucher Hỗ Trợ</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Voucher</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>