project/force-app/main/default/objects/Product2/fields/Total_Budget_Voucher_VND__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Voucher_VND__c</fullName>
    <description>Tự động tính = Số Tháng Hỗ Trợ * Tiền Hỗ Trợ Ngoài Trời</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Outdoor Support Amount (VND</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>