project/force-app/main/default/objects/Product2/fields/Total_Rent_Budget_and_SF_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent_Budget_and_SF_USD_Month__c</fullName>
    <description>Read Only;
= Tiền Thuê NS (USD/Tháng) + Tiền Phí Dịch Vụ NS (USD/Tháng)</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rent Budget and SF (USD/Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>