project/force-app/main/default/objects/Product2/fields/Total_Rent_Budget_and_SF_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Rent_Budget_and_SF_VND_Month__c</fullName>
    <description>Read Only;
= Tổng Tiền Thuê &amp; PDV * Tỉ Giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rent Budget and SF (VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>