project/force-app/main/default/objects/Product2/fields/Total_Unit_Price_Entire_House_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price_Entire_House_USD_Month__c</fullName>
    <description>- Read Only;
- = Đơn Giá NS Nguyên Căn * Tổng Diện Tích GFA</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Price Entire House(USD/Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>