project/force-app/main/default/objects/Product2/fields/Total_Unit_Price_Entire_House_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price_Entire_House_VND_Month__c</fullName>
    <description>- Read Only;
- = Tiền Thuê NS Nguyên Căn (USD/Tháng) * Tỉ Giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Price Entire House(VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>