project/force-app/main/default/objects/Product2/fields/Total_Unit_Price_Floor_1_2_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price_Floor_1_2_USD_Month__c</fullName>
    <description>- Read Only;
- = Đơn Giá NS Tầng 1 + 2 * (Diện Tích GFA Tầng 1 + Diện Tích GFA Tầng 2)</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Price Floor 1 + 2(USD/Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>