project/force-app/main/default/objects/Product2/fields/Total_Unit_Price_USD_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price_USD_Month__c</fullName>
    <description>- Read Only;
- Đối với Gian hàng = Đơn Giá NS (USD/m2/Tháng) * Diện Tích (m2)
- Đối với Căn = Đơn Giá NS (USD/m2/Tháng) * Diện Tích Đất Sử Dụng (m2)</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Price (USD/Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>