project/force-app/main/default/objects/Product2/fields/Total_Unit_Price_VND_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Price_VND_Month__c</fullName>
    <description>Read Only;
= Tổng Tiền Thuê NS (USD) * Tỉ Giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unit Price (VND/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>