project/force-app/main/default/objects/Product2/fields/Unit_Price_of_Entire_House_USD_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_of_Entire_House_USD_m2_Month__c</fullName>
    <label>Unit Price of Entire House(USD/m2/Month)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>