project/force-app/main/default/objects/Product2/fields/Unit_Price_VND_m2_Month__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_VND_m2_Month__c</fullName>
    <description>= Đơn Giá NS (USD/m2/Tháng) * Tỉ giá</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price (VND/m2/Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>