project/force-app/main/default/objects/Product2/fields/Used_Area__c.field-meta.xml
<CustomField>
    <fullName>Used_Area__c</fullName>
    <description>Help Text: (m2)</description>
    <label>Used Area</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>