project/force-app/main/default/objects/Product2/fields/Voucher_Budget__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Budget__c</fullName>
    <description>= Số Tháng Hỗ Trợ Theo NS * Tiền Voucher Hỗ Trợ/Tháng Theo NS (VNĐ/Tháng)</description>
    <formula>/* TODO: Update formula expression manually */
0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>