project/force-app/main/default/objects/Product2/fields/Voucher_Support_Amount__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Support_Amount__c</fullName>
    <description>Help Text: VNĐ/Tháng</description>
    <label>Voucher Support Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>