project/force-app/main/default/objects/Product2/recordTypes/Ad_Location.recordType-meta.xml
<RecordType>
    <fullName>Ad_Location</fullName>
    <label>Ad Location</label>
    <description>Ad Lease Location</description>
    <active>true</active>
    <businessProcess>Product2</businessProcess>
</RecordType>