project/force-app/main/default/objects/Product2/recordTypes/RO_TTTM.recordType-meta.xml
<RecordType>
    <fullName>RO_TTTM</fullName>
    <label>Shopping Mall RO</label>
    <description>Retail Outlet in Shopping Mall</description>
    <active>true</active>
    <businessProcess>Product2</businessProcess>
</RecordType>