project/force-app/main/default/objects/Product2/recordTypes/Shop_KPTM.recordType-meta.xml
<RecordType>
    <fullName>Shop_KPTM</fullName>
    <label>Shop KPTM</label>
    <description>Shop in Commercial Townhouse</description>
    <active>true</active>
    <businessProcess>Product2</businessProcess>
</RecordType>