project/force-app/main/default/objects/Product2/listViews/By_Building.listView-meta.xml
<ListView>
    <fullName>By_Building</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Business_Entity__c</columns>
    <columns>Floor__c</columns>
    <columns>Inventory_Status__c</columns>
    <columns>Industry__c</columns>
    <filterScope>Everything</filterScope>
    <label>By Building</label>
</ListView>