project/force-app/main/default/objects/Product2/listViews/Vacant_ROs.listView-meta.xml
<ListView>
    <fullName>Vacant_ROs</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Business_Entity__c</columns>
    <columns>Floor__c</columns>
    <columns>Inventory_Status__c</columns>
    <columns>Area_Indoor__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inventory_Status__c</field>
        <operation>equals</operation>
        <value>Vacant</value>
    </filters>
    <label>Vacant ROs</label>
</ListView>